--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
+*.pt filter=lfs diff=lfs merge=lfs -text
 *(>=50KB) filter=lfs diff=lfs merge=lfs -text
