--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 __pycache__/
 *.mp4
+*.pt
+*.pth
+*U-2-Net-master
 # 忽略大小超過 1MB 的檔案
 *.[!.]*filter=lfs -crlf --text --ignore-case --pickaxe-regex -size-gt=1m
 
